<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentations.board.AddPostFragment">

        <ImageButton
            android:id="@+id/btn_arrow_left"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:background="@drawable/ic_board_arrow_left"
            android:layout_marginTop="17dp"
            android:layout_marginStart="17dp"
            android:contentDescription="@string/content_board_btn_arrow_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/board_add_post"
            app:layout_constraintTop_toTopOf="@id/btn_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_hint_title"
            android:textSize="14sp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/btn_arrow_left"/>

        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="20dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/et_title">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_hint_category"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/dark_grey"/>

        </LinearLayout>

        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:minHeight="260dp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/bg_rectangle_r10_white_border_lightgrey"
            android:hint="@string/post_hint_content"
            android:gravity="top|start"
            app:layout_constraintTop_toBottomOf="@id/layout_category"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/bg_board_btn_state"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/btn_go_to_detail"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>