<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="12dp"
            android:elevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_arrow_left"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:background="@drawable/ic_board_arrow_left"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/content_board_btn_arrow_left"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_title_modify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_modify_info"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginTop="18dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_arrow_left"
                    app:layout_constraintStart_toStartOf="@+id/btn_arrow_left"/>

                <TextView
                    android:id="@+id/tv_content_modify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_modify_info"
                    android:textColor="@color/grey"
                    android:textSize="10sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_modify"
                    app:layout_constraintStart_toStartOf="@+id/tv_title_modify"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="17dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_content_modify">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_modify_nickname"/>

                        <EditText
                            android:id="@+id/et_departure"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="14sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/content_modify_location"/>

                        <EditText
                            android:id="@+id/et_arrival"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textSize="14sp"/>

                    </LinearLayout>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
