<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        tools:context=".presentation.mypage.MyPageFragment">

        <TextView
            android:id="@+id/tv_title_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_mypage"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="60dp"
            android:elevation="10dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_mypage">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="30dp">

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="구슬님" />

                <TextView
                    android:id="@+id/tv_profile_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_profile_name"
                    app:layout_constraintStart_toEndOf="@+id/tv_profile_name"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="구미시 인동동" />

                <TextView
                    android:id="@+id/tv_stamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/tv_profile_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
                    tools:text="구슬을 벌써 5개나 모았어요!" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_pea"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_information">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/menu_board"
                    android:paddingVertical="10dp"
                    android:text="@string/content_mypage_modify"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/whisper" />

                <TextView
                    android:id="@+id/tv_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/menu_board"
                    android:paddingVertical="10dp"
                    android:text="@string/content_mypage_history"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/whisper" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/menu_board"
                        android:paddingVertical="10dp"
                        android:text="@string/content_mypage_version"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/menu_board"
                        android:text="@string/mypage_version"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>