<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="40dp"
            android:elevation="10dp"
            app:cardCornerRadius="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_arrow_left"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/ic_board_arrow_left"
                    android:contentDescription="@string/content_board_btn_arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_modify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/title_modify_info"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@+id/btn_arrow_left"
                    app:layout_constraintTop_toBottomOf="@+id/btn_arrow_left" />

                <TextView
                    android:id="@+id/tv_content_modify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:elevation="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:includeFontPadding="false"
                    android:text="@string/content_edit_profile"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_title_modify"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_modify"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_content_modify"
                    app:layout_constraintVertical_bias="0.23"
                    tools:layout_editor_absoluteX="17dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/et_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent"
                            android:elevation="5dp"
                            android:fontFamily="@font/roboto_black"
                            android:hint="@string/content_nickname_hint"
                            android:textColor="@color/nero"
                            android:textColorHint="@color/silver"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="12dp"
                            android:background="@color/silver"
                            android:elevation="1dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="38dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/et_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:background="@color/transparent"
                            android:elevation="5dp"
                            android:fontFamily="@font/roboto_black"
                            android:hint="@string/content_location_hint"
                            android:textColor="@color/nero"
                            android:textColorHint="@color/silver"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="12dp"
                            android:background="@color/silver"
                            android:elevation="1dp" />

                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="93dp"
                    android:background="@drawable/bg_rect_transparent_caper_radius_100_stroke_0"
                    android:elevation="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:includeFontPadding="false"
                    android:minHeight="0dp"
                    android:paddingVertical="12dp"
                    android:text="@string/content_edit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
